// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportDialogWithLocalState clicking export on the dialog triggers generateExports, generates json and html with the current exportDescription 1`] = `
<ExportDialog
  afterDismissed={[Function]}
  deps={
    Object {
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
        "reportNameGenerator": undefined,
      },
    }
  }
  description="test content with special characters: <> $ \\" \` '"
  featureFlagStoreData={
    Object {
      "test-feature-flag": true,
    }
  }
  generateExports={[Function]}
  htmlExportData="test html"
  htmlFileName=""
  isOpen={true}
  jsonExportData="test json"
  jsonFileName=""
  onClose={[Function]}
  onDescriptionChange={[Function]}
  reportExportFormat="Assessment"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
    ]
  }
/>
`;

exports[`ExportDialogWithLocalState edit text field: test content with special characters: <> $ " \` ' 1`] = `
<ExportDialog
  afterDismissed={[Function]}
  deps={
    Object {
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
        "reportNameGenerator": undefined,
      },
    }
  }
  description="test content with special characters: <> $ \\" \` '"
  featureFlagStoreData={
    Object {
      "test-feature-flag": true,
    }
  }
  generateExports={[Function]}
  htmlExportData=""
  htmlFileName=""
  isOpen={true}
  jsonExportData=""
  jsonFileName=""
  onClose={[Function]}
  onDescriptionChange={[Function]}
  reportExportFormat="Assessment"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
    ]
  }
/>
`;

exports[`ExportDialogWithLocalState on dialog opened 1`] = `
<ExportDialog
  afterDismissed={[Function]}
  deps={
    Object {
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
        "reportNameGenerator": undefined,
      },
    }
  }
  description="export description"
  featureFlagStoreData={
    Object {
      "test-feature-flag": true,
    }
  }
  generateExports={[Function]}
  htmlExportData=""
  htmlFileName="export name"
  isOpen={true}
  jsonExportData=""
  onClose={[Function]}
  onDescriptionChange={[Function]}
  reportExportFormat="Assessment"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
    ]
  }
/>
`;

exports[`ExportDialogWithLocalState render with dialog closed 1`] = `
<ExportDialog
  afterDismissed={[Function]}
  deps={
    Object {
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
        "reportNameGenerator": undefined,
      },
    }
  }
  description=""
  featureFlagStoreData={
    Object {
      "test-feature-flag": true,
    }
  }
  generateExports={[Function]}
  htmlExportData=""
  htmlFileName=""
  isOpen={false}
  jsonExportData=""
  jsonFileName=""
  onClose={[Function]}
  onDescriptionChange={[Function]}
  reportExportFormat="Assessment"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
    ]
  }
/>
`;

exports[`ExportDialogWithLocalState render with dialog open 1`] = `
<ExportDialog
  afterDismissed={[Function]}
  deps={
    Object {
      "reportGenerator": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "assessmentJsonExportGenerator": undefined,
        "assessmentReportHtmlGenerator": undefined,
        "automatedChecksReportHtmlGenerator": undefined,
        "fastPassReportHtmlGenerator": undefined,
        "reportNameGenerator": undefined,
      },
    }
  }
  description=""
  featureFlagStoreData={
    Object {
      "test-feature-flag": true,
    }
  }
  generateExports={[Function]}
  htmlExportData=""
  htmlFileName=""
  isOpen={true}
  jsonExportData=""
  jsonFileName=""
  onClose={[Function]}
  onDescriptionChange={[Function]}
  reportExportFormat="Assessment"
  reportExportServices={
    Array [
      Object {
        "generateMenuItem": null,
        "key": "html",
      },
    ]
  }
/>
`;
